src/objects/QA_Report_Review_Rating__c.object
<CustomObject>
    <fields>
        <fullName>A_V_SectionF__c</fullName>
        <formula>IF(Text(A_V_Section__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/V Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_V_Section_ClosureF__c</fullName>
        <formula>IF(Text(A_V_Section_Closure__c)=&apos;15&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/V Section - Closure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_V_Section_Closure__c</fullName>
        <label>A/V Section - Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_V_Section__c</fullName>
        <label>A/V Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analysis_of_TreatmentF__c</fullName>
        <formula>IF(Text(Analysis_of_Treatment_New__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Analysis of Treatment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_of_Treatment_New__c</fullName>
        <label>Analysis of Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analysis_of_Treatment__c</fullName>
        <label>Analysis of Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Detail_Total_Rating__c</fullName>
        <formula>VALUE(TEXT( Current_Diagnosis__c)) + VALUE(TEXT(Nature_History__c)) + VALUE(TEXT(Surgery_Hospitalization__c)) + VALUE(TEXT(Healthcare_Provider__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Detail Total Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Management_PlanF__c</fullName>
        <formula>IF(Text(Case_Management_Plan_New__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Management Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Management_Plan_New__c</fullName>
        <label>Case Management Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Management_Plan__c</fullName>
        <label>Case Management Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Manager_Notes_Comments__c</fullName>
        <label>Case Manager Notes Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Notes_RatingF__c</fullName>
        <formula>IF(Text(Case_Manager_Notes_Rating__c)=&apos;100&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Manager Notes Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Notes_Rating__c</fullName>
        <label>Case Manager Notes Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Report_Opportunity__c</fullName>
        <label>Case Report / Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>QA - Report Review / Rating</relationshipLabel>
        <relationshipName>QA_Report_Review_Rating</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Closure_Total__c</fullName>
        <formula>VALUE(text(Report_Details_Closure__c)) + VALUE(text(Return_to_Work_Status_Closure__c)) + VALUE(text(MMI_Closure__c)) + VALUE(text(Other_Pertinent_Information_Closure__c)) + VALUE(text(Reason_for_Closure__c)) + VALUE(text(Comp_Analysis_of_Case_Progression__c)) + VALUE(text(A_V_Section_Closure__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closure Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Analysis_of_Case_ProgressionF__c</fullName>
        <formula>IF(Text(Comp_Analysis_of_Case_Progression__c)=&apos;14&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp Analysis of Case Progression</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Analysis_of_Case_Progression__c</fullName>
        <label>Comp Analysis of Case Progression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Diagnosis__c</fullName>
        <label>Current Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Treatment_Plan_NewF__c</fullName>
        <formula>IF(Text(Current_Treatment_Plan_New__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Treatment Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatment_Plan_New__c</fullName>
        <label>Current Treatment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Treatment_Plan__c</fullName>
        <label>Current Treatment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DetailF__c</fullName>
        <formula>IF(Text(Detail__c)=&apos;100&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Total__c</fullName>
        <formula>VALUE(text(Surgeries_and_Hospitalizations__c)) + VALUE(text(Healthcare_Provider_Section__c)) + VALUE(text(Diagnosis_and_Injury_Information__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnosis_and_Injury_Comments__c</fullName>
        <label>Diagnosis and Injury Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_and_Injury_Information__c</fullName>
        <label>Diagnosis and Injury Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBG_Explanation__c</fullName>
        <label>EBG Explanation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EE_Job_Evaluation__c</fullName>
        <label>EE Job Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EGB_ExplanationF__c</fullName>
        <formula>IF(Text(EGB_Explanation__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EGB Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EGB_Explanation__c</fullName>
        <label>EGB Explanation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_InformationF__c</fullName>
        <formula>IF(Text(Employer_Information__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Information__c</fullName>
        <label>Employer Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enclosure_s_cc_SectionF__c</fullName>
        <formula>IF(Text(Enclosure_s_cc_Section__c)=&apos;100&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enclosure(s)/cc: Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enclosure_s_cc_Section_Comments__c</fullName>
        <label>Enclosure(s)/cc: Section Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enclosure_s_cc_Section__c</fullName>
        <label>Enclosure(s)/cc: Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthcare_Provider_Commnets__c</fullName>
        <label>Healthcare Provider Commnets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Healthcare_Provider_Section__c</fullName>
        <label>Healthcare Provider Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthcare_Provider__c</fullName>
        <label>Healthcare Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Prog_Total__c</fullName>
        <formula>VALUE(text(Report_Details_Prognosis_Diagnostics__c)) + VALUE(text(Current_Treatment_Plan_New__c)) + VALUE(text(Return_to_Work_Info__c 
)) + VALUE(text(Employer_Information__c)) + VALUE(text(Vocational_Services__c)) + VALUE(text(MMI__c)) + VALUE(text(EBG_Explanation__c)) + VALUE(text(Analysis_of_Treatment_New__c)) + VALUE(text(Case_Management_Plan_New__c)) + VALUE(text(A_V_Section__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Prog Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMIF__c</fullName>
        <formula>IF(Text(MMI__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMI_ClosureF__c</fullName>
        <formula>IF(Text(MMI_Closure__c)=&apos;14&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMI - Closure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMI_Closure__c</fullName>
        <label>MMI - Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMI__c</fullName>
        <label>MMI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_History__c</fullName>
        <label>Nature &amp; History</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Pertinent_Info__c</fullName>
        <label>Other Pertinent Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Pertinent_Information_ClosureF__c</fullName>
        <formula>IF(Text(Other_Pertinent_Information_Closure__c)=&apos;14&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Pertinent Information - Closure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Pertinent_Information_Closure__c</fullName>
        <label>Other Pertinent Information - Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_S__c</fullName>
        <label>P &amp; S</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_of_Action__c</fullName>
        <label>Plan of Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_ClosureF__c</fullName>
        <formula>IF(Text(Reason_for_Closure__c)=&apos;14&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason for Closure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closure__c</fullName>
        <label>Reason for Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Details_ClosureF__c</fullName>
        <formula>IF(Text(Report_Details_Closure__c)=&apos;15&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Details - Closure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Details_Closure__c</fullName>
        <label>Report Details - Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Details_Prognosis_DiagnosticsF__c</fullName>
        <formula>IF(Text(Report_Details_Prognosis_Diagnostics__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Details (Prognosis/Diagnostics)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Details_Prognosis_Diagnostics__c</fullName>
        <label>Report Details (Prognosis/Diagnostics)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Details__c</fullName>
        <label>Report Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsive_to_QC_Emails_Comments__c</fullName>
        <label>Reason for Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsive_to_QC_Emails_RatingF__c</fullName>
        <formula>IF(Text(Responsive_to_QC_Emails_Rating__c)=&apos;Yes&apos;,50,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsive to QC Emails Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responsive_to_QC_Emails_Rating__c</fullName>
        <label>QA Email Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_to_Work_InfoF__c</fullName>
        <formula>IF(Text(Return_to_Work_Info__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return to Work Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_to_Work_Info_ClosureF__c</fullName>
        <formula>IF(Text(Return_to_Work_Status_Closure__c)=&apos;14&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return to Work Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_to_Work_Info__c</fullName>
        <label>Return to Work Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_to_Work_Status_Closure__c</fullName>
        <label>Return to Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_to_Work_Status__c</fullName>
        <label>Return to Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Total__c</fullName>
        <formula>VALUE(TEXT(Report_Details__c))  + VALUE(TEXT(Return_to_Work_Info__c))  +  VALUE(TEXT(Return_to_Work_Status__c))  + VALUE(TEXT(MMI__c))  + VALUE(TEXT(Other_Pertinent_Info__c)) + VALUE(TEXT( EE_Job_Evaluation__c )) +VALUE(TEXT(Analysis_of_Treatment__c)) + VALUE(TEXT(Case_Management_Plan__c)) + VALUE(TEXT(A_V_Section__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Uniform_Total__c</fullName>
        <formula>VALUE(TEXT( Summation_of_Medical_Status__c )) + VALUE(TEXT( Current_Treatment_Plan__c )) + VALUE(TEXT( Work_Status__c )) + VALUE(TEXT( Work_Restrictions__c )) + VALUE(TEXT( P_S__c )) + VALUE(TEXT( Plan_of_Action__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Uniform Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summation_of_Medical_Status__c</fullName>
        <label>Summation of Medical Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervised_by__c</fullName>
        <formula>TEXT(Case_Report_Opportunity__r.Related_Case__r.Supervised_by__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervised by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surgeries_and_Hospitalizations_Comments__c</fullName>
        <label>Surgeries and Hospitalizations Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Surgeries_and_Hospitalizations__c</fullName>
        <label>Surgeries and Hospitalizations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surgery_Hospitalization__c</fullName>
        <label>Surgery/Hospitalization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_QA_Rating__c</fullName>
        <formula>Total__c + Detail_Total__c + Initial_Prog_Total__c + Value(text(Detail__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total QA Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_QA_Review_Rating__c</fullName>
        <label>Total QA Review Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>(VALUE(text(Case_Manager_Notes_Rating__c)) + VALUE(text(Enclosure_s_cc_Section__c)))/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vocational_ServicesF__c</fullName>
        <formula>IF(Text(Vocational_Services__c)=&apos;10&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vocational Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vocational_Services__c</fullName>
        <label>Vocational Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Restrictions__c</fullName>
        <label>Work Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Status__c</fullName>
        <label>Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA - Report Review / Rating</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>QA - Report Review / Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA - Report Review / Rating</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>